--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,22 +9,33 @@
         </h1>
         <form action="/addToDo" method="POST">
             <input type="text" name="newtodo" placeholder="add new item">
-            <button>
+            <button type="submit">
                 Add To-Do
             </button>
+            <h2>
+                Current Tasks
+            </h2>
 
-            <% for( var i-0; i < tasks.length; i++){%>
+            <% for( var i=0; i < tasks.length; i++){%>
                 <li><input type="checkbox" name="check" value="<%= tasks[i] %>" /> <%= tasks[i] %> </li>
             <% } %>
-            <h2>
-                Added To-Do
-            </h2>
+            
             <button formaction="/removeToDo" type="submit">
                 Remove
             </button>
         </form>
-        <h2>
-            Completed
-        </h2>
+        <form action="/deleteToDo" mehtod="POST">
+            <h2>
+                Completed Tasks
+            </h2>
+
+            <% for( var i=0; i < completed.length; i++){%>
+                <li><input type="checkbox" name="delete" value="<%= completed[i] %>" /> <%= completed[i] %> </li>
+            <% } %>
+            <button formaction="/deleteToDo" type="submit">
+                Remove
+            </button>
+        </form>
+        
     </body>
 </html>
