--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
                 Remove
             </button>
         </form>
-        <form action="/deleteToDo" mehtod="POST">
+        <form action="/deleteToDo" method="POST">
             <h2>
                 Completed Tasks
             </h2>
@@ -33,7 +33,7 @@
                 <li><input type="checkbox" name="delete" value="<%= completed[i] %>" /> <%= completed[i] %> </li>
             <% } %>
             <button formaction="/deleteToDo" type="submit">
-                Remove
+                Delete
             </button>
         </form>
         
