--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
             My To-Do List
         </h1>
         <form action="/addToDo" method="POST">
-            <input type="text" name="newtodo" placeholder="add new item">
+            <input type="text" name="newTodo" placeholder="add new item">
             <button type="submit">
                 Add To-Do
             </button>
