--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
             </h2>
 
             <% for( var i=0; i < tasks.length; i++){%>
-                <li><input type="checkbox" name="check" value="<%= tasks[i] %>" /> <%= tasks[i] %> </li>
+                <li><input type="checkbox" name="check" value="<%= tasks[i]._id %>" /> <%= tasks[i].item %> </li>
             <% } %>
             
             <button formaction="/removeToDo" type="submit">
@@ -30,7 +30,7 @@
             </h2>
 
             <% for( var i=0; i < completed.length; i++){%>
-                <li><input type="checkbox" name="delete" value="<%= completed[i] %>" /> <%= completed[i] %> </li>
+                <li><input type="checkbox" name="delete" value="<%= completed[i]._id %>" /> <%= completed[i].item %> </li>
             <% } %>
             <button formaction="/deleteToDo" type="submit">
                 Delete
