--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,9 @@
 <html>
     <head>
+
+        <link href="static/todo.css" rel="stylesheet">
         <title>ToDo</title>
-        <link href="/styles.css" rel="stylesheet">
+        
     </head>
     <body>
         <h1>
